[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "release-pilot"
version = "0.0.0"
description = "Deterministic orchestration of white-label app builds"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Andre Argolo", email = "mail@argolo.dev" }
]

[project.scripts]
release-pilot = "release_pilot:main"

[tool.setuptools]
py-modules = ["release_pilot"]
